--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
                 <div class="flip-card-back">
                     <div class="info-section">
                         <p><strong>科別：</strong>神經外科</p>
-                        <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
+                        <p><strong>專長：</strong>顱內動脈瘤 / 頸動脈剝離</p>
                         <p><strong>年資：</strong>不詳</p>
                         <p><strong>名言：</strong></p>
                         <p class="motto">「每一刀，都要為了活著的希望。」</p>
@@ -56,23 +56,23 @@
             <div class="card-header">
                 <img src="./img/user.png" alt="曉翔" class="profile-img">
             </div>
-            <h3 class="doctor-name">xxx</h3>
+            <h3 class="doctor-name">肖堯</h3>
             <p class="position"><i class="fa-solid fa-user-doctor"></i> 副院長</p>
         </div>
         <!-- 背面：玩家視角 -->
         <div class="flip-card-back">
             <div class="info-section">
-                <p><strong>科別：</strong>神經外科</p>
-                <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
-                <p><strong>年資：</strong>不詳</p>
+                <p><strong>科別：</strong>胸腔外科</p>
+                <p><strong>專長：</strong>創傷性氣血胸 / 心靈輔導</p>
+                <p><strong>年資：</strong>8年</p>
                 <p><strong>名言：</strong></p>
-                <p class="motto">「每一刀，都要為了活著的希望。」</p>
+                <p class="motto">「心如止水，波濤不驚」</p>
             </div>
             <hr class="divider">
             <div class="performer">
-                <h4>扮演者：暈船仔丨小翔丨</h4>
-                <p>Discord：uaenaxiang</p>
-                <a href="https://www.twitch.tv/yourname" target="_blank" class="twitch-link">
+                <h4>扮演者：凱僑</h4>
+                <p>Discord：kaichiao</p>
+                <a href="https://www.twitch.tv/yichiaola" target="_blank" class="twitch-link">
                     <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                     Twitch 頻道
                 </a>
@@ -95,16 +95,16 @@
         <div class="flip-card-back">
             <div class="info-section">
                 <p><strong>科別：</strong>急診科</p>
-                <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
+                <p><strong>專長：</strong>各式急重症手術</p>
                 <p><strong>年資：</strong>不詳</p>
                 <p><strong>名言：</strong></p>
-                <p class="motto">「每一刀，都要為了活著的希望。」</p>
+                <p class="motto">「眾生皆平等」</p>
             </div>
             <hr class="divider">
             <div class="performer">
-                <h4>扮演者：暈船仔丨小翔丨</h4>
-                <p>Discord：uaenaxiang</p>
-                <a href="https://www.twitch.tv/yourname" target="_blank" class="twitch-link">
+                <h4>扮演者：聰明鳥</h4>
+                <p>Discord：smartbird1102</p>
+                <a href="https://www.twitch.tv/smartbird1102" target="_blank" class="twitch-link">
                     <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                     Twitch 頻道
                 </a>
@@ -121,12 +121,12 @@
                             <img src="./img/D1.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">曉翔</h3>
-                        <p class="position"><i class="fa-solid fa-user-doctor"></i> 外科主任</p>
+                        <p class="position"><i class="fa-solid fa-user-doctor"></i> 創傷中心主任</p>
                     </div>
                     <!-- 背面：玩家視角 -->
                     <div class="flip-card-back">
                         <div class="info-section">
-                            <p><strong>科別：</strong>外科</p>
+                            <p><strong>科別：</strong>創傷中心</p>
                             <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
                             <p><strong>年資：</strong>5年</p>
                             <p><strong>名言：</strong></p>
@@ -418,7 +418,7 @@
                         <div class="card-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
-                        <h3 class="doctor-name">xxx</h3>
+                        <h3 class="doctor-name">高丹哲</h3>
                         <p class="position"><i class="fa-solid fa-truck-medical"></i> EMT</p>
                     </div>
                     <!-- 背面：玩家視角 -->
@@ -467,6 +467,103 @@
                             <h4>扮演者：暈船仔丨小翔丨</h4>
                             <p>Discord：uaenaxiang</p>
                             <a href="https://www.twitch.tv/yourname" target="_blank" class="twitch-link">
+                                <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
+                                Twitch 頻道
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2 class="section-title">🔷 醫療財團</h2>
+        <div class="card-row">
+            <!-- EMT 救護員 -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <!-- 正面：角色視角 -->
+                    <div class="flip-card-front">
+                        <div class="card-header">
+                            <img src="./img/ice.png" alt="曉翔" class="profile-img">
+                        </div>
+                        <h3 class="doctor-name">iCE!</h3>
+                        <p class="position"><i class="fa-solid fa-hospital"></i> 董事</p>
+                    </div>
+                    <!-- 背面：玩家視角 -->
+                    <div class="flip-card-back">
+                        <div class="info-section">
+                            <p><strong>科別：</strong>董事會</p>
+                            <p><strong>專長：</strong>自學</p>
+                            <p><strong>年資：</strong>半年</p>
+                            <p><strong>名言：</strong></p>
+                            <p class="motto">「LOOK AT MY EYES」</p>
+                        </div>
+                        <hr class="divider">
+                        <div class="performer">
+                            <h4>扮演者：艾斯</h4>
+                            <p>Discord：ice3_</p>
+                            <a href="https://www.twitch.tv/iceice0003" target="_blank" class="twitch-link">
+                                <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
+                                Twitch 頻道
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <!-- 正面：角色視角 -->
+                <div class="flip-card-front">
+                    <div class="card-header">
+                        <img src="./img/icewife.png" alt="曉翔" class="profile-img">
+                    </div>
+                    <h3 class="doctor-name">蕎妃</h3>
+                    <p class="position"><i class="fa-solid fa-hospital"></i> 董事</p>
+                </div>
+                <!-- 背面：玩家視角 -->
+                <div class="flip-card-back">
+                    <div class="info-section">
+                        <p><strong>科別：</strong>心臟血管外科</p>
+                        <p><strong>專長：</strong>心臟瓣膜手術/微創開心手術</p>
+                        <p><strong>年資：</strong>不詳</p>
+                        <p><strong>名言：</strong></p>
+                        <p class="motto">「偶爾耍廢，經常偶爾。」</p>
+                    </div>
+                    <hr class="divider">
+                    <div class="performer">
+                        <h4>扮演者：蕎妃</h4>
+                        <p>Discord：hannahijk</p>
+                        <a href="https://www.twitch.tv/hannahijk" target="_blank" class="twitch-link">
+                            <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
+                            Twitch 頻道
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <!-- 正面：角色視角 -->
+                    <div class="flip-card-front">
+                        <div class="card-header">
+                            <img src="./img/sick.png" alt="曉翔" class="profile-img">
+                        </div>
+                        <h3 class="doctor-name">Sick</h3>
+                        <p class="position"><i class="fa-solid fa-hospital"></i> 董事</p>
+                    </div>
+                    <!-- 背面：玩家視角 -->
+                    <div class="flip-card-back">
+                        <div class="info-section">
+                            <p><strong>科別：</strong>董事會</p>
+                            <p><strong>專長：</strong>人事會計</p>
+                            <p><strong>年資：</strong>25年</p>
+                            <p><strong>名言：</strong></p>
+                            <p class="motto">「錢花在哪裡，命就撐到哪裡。」</p>
+                        </div>
+                        <hr class="divider">
+                        <div class="performer">
+                            <h4>扮演者：稀客</h4>
+                            <p>Discord：sick1429</p>
+                            <a href="https://www.twitch.tv/sick1122" target="_blank" class="twitch-link">
                                 <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                                 Twitch 頻道
                             </a>
