--- a/index.html
+++ b/index.html
@@ -6,29 +6,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>白塔醫院 | 末日醫療中心</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <div id="header"></div>
     <main>
-<section class="carousel">
-    <div class="carousel-container">
-        <button class="prev">&#10094;</button>
-        <div class="carousel-slide">
-            <img src="./img/pic3.png" alt="醫院外觀">
-            <img src="./img/pic4.png" alt="醫護團隊">
-            <img src="./img/pic5.png" alt="設備圖">
+        <section>
+            <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+                <!-- Indicators/dots -->
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                </div>
+
+                <!-- The slideshow/carousel -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/pic3.png" alt="Los Angeles" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Los Angeles</h3>
+                            <p>We had such a great time in LA!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic4.png" alt="Chicago" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>Chicago</h3>
+                            <p>Thank you, Chicago!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic5.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>New York</h3>
+                            <p>We love the Big Apple!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls/icons -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </section>
+        <section class="news">
+            <h2><i class="fa-solid fa-bullhorn"></i> 最新公告</h2>
+            <ul class="news-list">
+                <li><span class="date">04/20</span>新增「戰地行動包」訓練課程</li>
+                <li><span class="date">04/15</span>成立創傷中心（TC）</li>
+                <li><span class="date">04/10</span>開放實習醫護線上申請</li>
+            </ul>
+        </section>
+<section class="team-preview">
+    <h2><i class="fa-solid fa-user-md"></i> 醫療團隊預覽</h2>
+    <div class="team-grid">
+        <div class="member-card">
+            <img src="./img/user.png" alt="曉翔">
+            <h3>史蒂芬·史傳奇</h3>
+            <p>院長 / 頸動脈剝離</p>
         </div>
-        <button class="next">&#10095;</button>
+        <div class="member-card">
+            <img src="./img/user.png" alt="凜琳">
+            <h3>肖堯</h3>
+            <p>副院長 / 創傷性氣血胸</p>
+        </div>
+        <div class="member-card">
+            <img src="./img/user.png" alt="小雪">
+            <h3>阿鳥</h3>
+            <p>急診科主任 / 急重症專家</p>
+        </div>
+                <div class="member-card">
+                    <img src="./img/user.png" alt="小雪">
+                    <h3>黃曉翔</h3>
+                    <p>創傷中心主任 / 創傷專家</p>
+                </div>
     </div>
+    <a href="team.html" class="teambtn">查看更多醫師</a>
 </section>
-    <section class="hero">
-        <div class="overlay">
-            <h1>白塔仍亮，生命仍在</h1>
-            <p>我們守護的不只是身體，還有希望。</p>
-            <a href="#" class="btn">立即加入白塔</a>
-        </div>
-    </section>
+
+
+        <section class="hero">
+            <div class="overlay">
+                <h1>白塔仍亮，生命仍在</h1>
+                <p>我們守護的不只是身體，還有希望。</p>
+                </a><button type="button" class="btn btn-primary">立即加入白塔</button>
+
+            </div>
+        </section>
     </main>
     <div id="footer"></div>
     <script src="./js/script.js"></script>
