--- a/index.html
+++ b/index.html
@@ -22,29 +22,125 @@
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
                     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="8"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="9"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="10"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="11"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="12"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="13"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="14"></button>
                 </div>
 
                 <!-- The slideshow/carousel -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/pic3.png" alt="Los Angeles" class="d-block carousel-img" style="width:100%">
+                        <img src="./img/pic1.png" alt="Los Angeles" class="d-block carousel-img" style="width:100%">
                         <div class="carousel-caption">
-                            <h3>Los Angeles</h3>
-                            <p>We had such a great time in LA!</p>
+                            <h3>白塔醫院大廳</h3>
+                            <p>這裡是希望的起點，每一次踏入，都是為了守護生命。</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/pic4.png" alt="Chicago" class="d-block carousel-img" style="width:100%">
+                        <img src="./img/pic2.png" alt="Chicago" class="d-block carousel-img" style="width:100%">
                         <div class="carousel-caption">
-                            <h3>Chicago</h3>
-                            <p>Thank you, Chicago!</p>
+                            <h3>中央藥局</h3>
+                            <p>每一份處方，都是對健康的細心守護。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic3.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>白塔咖啡廳</h3>
+                            <p>為每一位辛勞的夥伴與家屬，獻上溫暖時光。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic4.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>診間區域</h3>
+                            <p>在問診與傾聽中，我們找回安心與健康。</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./img/pic5.png" alt="New York" class="d-block carousel-img" style="width:100%">
                         <div class="carousel-caption">
-                            <h3>New York</h3>
-                            <p>We love the Big Apple!</p>
+                            <h3>手術準備區</h3>
+                            <p>準備就緒，讓每一場手術更穩妥安心。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic6.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>手術室</h3>
+                            <p>專業與冷靜交會，守護生命的關鍵時刻。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic7.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>加護病房</h3>
+                            <p>24 小時不間斷的守護，讓希望不曾離開。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic8.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>X 光檢查區</h3>
+                            <p>透視每一個細節，為診斷提供最清晰的方向。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic9.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>MRI 檢查室</h3>
+                            <p>精密影像，為每一次判斷提供堅實依據。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic10.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>血管攝影室</h3>
+                            <p>探索血流的地圖，尋找治療的道路。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic11.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>研究與教學解剖室</h3>
+                            <p>每一份捐贈，都是醫學進步的無聲貢獻。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic12.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>遺體暫存室</h3>
+                            <p>謹慎與尊重，是我們對生命最後的致敬。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic13.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>住院病房</h3>
+                            <p>休養與陪伴交織，讓康復之路更有溫度。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic14.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>醫師休息區</h3>
+                            <p>短暫的休息，是為了更穩定的照護。</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/pic15.png" alt="New York" class="d-block carousel-img" style="width:100%">
+                        <div class="carousel-caption">
+                            <h3>戶外咖啡座</h3>
+                            <p>在星光下啜飲一杯溫熱，享受屬於深夜的靜謐。</p>
                         </div>
                     </div>
                 </div>
@@ -66,42 +162,42 @@
                 <li><span class="date">04/10</span>開放實習醫護線上申請</li>
             </ul>
         </section>
-<section class="team-preview">
-    <h2><i class="fa-solid fa-user-md"></i> 醫療團隊預覽</h2>
-    <div class="team-grid">
-        <div class="member-card">
-            <img src="./img/user.png" alt="曉翔">
-            <h3>史蒂芬·史傳奇</h3>
-            <p>院長 / 頸動脈剝離</p>
-        </div>
-        <div class="member-card">
-            <img src="./img/user.png" alt="凜琳">
-            <h3>肖堯</h3>
-            <p>副院長 / 創傷性氣血胸</p>
-        </div>
-        <div class="member-card">
-            <img src="./img/user.png" alt="小雪">
-            <h3>阿鳥</h3>
-            <p>急診科主任 / 急重症專家</p>
-        </div>
+        <section class="team-preview">
+            <h2><i class="fa-solid fa-user-md"></i> 醫療團隊預覽</h2>
+            <div class="team-grid">
+                <div class="member-card">
+                    <img src="./img/user.png" alt="曉翔">
+                    <h3>史蒂芬·史傳奇</h3>
+                    <p>院長 / 頸動脈剝離</p>
+                </div>
+                <div class="member-card">
+                    <img src="./img/user.png" alt="凜琳">
+                    <h3>肖堯</h3>
+                    <p>副院長 / 創傷性氣血胸</p>
+                </div>
+                <div class="member-card">
+                    <img src="./img/user.png" alt="小雪">
+                    <h3>阿鳥</h3>
+                    <p>急診科主任 / 急重症專家</p>
+                </div>
                 <div class="member-card">
                     <img src="./img/user.png" alt="小雪">
                     <h3>黃曉翔</h3>
                     <p>創傷中心主任 / 創傷專家</p>
                 </div>
-    </div>
-    <a href="team.html" class="teambtn">查看更多醫師</a>
-</section>
+            </div>
+            <a href="team.html" class="teambtn">查看更多醫師</a>
+        </section>
 
 
         <section class="hero">
             <div class="overlay">
                 <h1>白塔仍亮，生命仍在</h1>
                 <p>我們守護的不只是身體，還有希望。</p>
-                </a><button type="button" class="btn btn-primary">立即加入白塔</button>
-
+                <button type="button" class="btn-cta">立即加入白塔</button>
             </div>
         </section>
+
     </main>
     <div id="footer"></div>
     <script src="./js/script.js"></script>
