--- a/emergency.html
+++ b/emergency.html
@@ -149,14 +149,14 @@
                     <ul>
                         <li><strong>心跳 (HR)：</strong> 60 - 100 bpm</li>
                         <li><strong>呼吸 (RR)：</strong> 12 - 20 次/分鐘</li>
-                        <li><strong>血壓 (BP)：</strong> 約 90/60 ~ 120/80 mmHg</li>
-                        <li><strong>體溫：</strong> 36.1°C ~ 37.2°C</li>
+                        <li><strong>血壓 (BP)：</strong> 收縮壓:90-120mmHg/舒張壓:60-80mmHg</li>
+                        <li><strong>體溫：</strong> 36.5°C ~ 37.5°C</li>
                         <li><strong>血氧飽和度 (SpO₂)：</strong> 95% ~ 100%</li>
-                        <li><strong>血糖 (Glucose)：</strong> 70 - 100 mg/dL（空腹）</li>
+                        <li><strong>血糖 (Glucose)：</strong> < 70  mg/dL（空腹）</li>
                         <li><strong>尿量 (Urine output)：</strong> ≥ 0.5 mL/kg/hr</li>
                         <li><strong>意識狀態 (GCS)：</strong> 正常為 15 分</li>
                         <li><strong>膚色：</strong> 粉紅、乾燥（無發紺/濕冷）</li>
-                        <li><strong>瞳孔大小：</strong> 約 2 - 5 mm，對光反應靈敏</li>
+                        <li><strong>瞳孔大小：</strong> 約 2 - 4 mm，對光反應靈敏</li>
                     </ul>
                 </div>
 
