--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
             <a href="team.html" class="teambtn">查看更多醫師</a>
         </section>
 
+        <section class="team-video">
+            <h2><i class="fa-brands fa-youtube"></i> 白色巨塔-前導片</h2>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/eBhI6C29IoU?si=qHPnYVxWp20LX6Yq" title="YouTube video player" frameborder="0" allowfullscreen>
+                </iframe>
+            </div>
+        </section>
 
         <section class="hero">
             <div class="overlay">
