--- a/team.html
+++ b/team.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>白塔醫院 | 末日醫療中心</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 <body>
     <div id="header"></div>
     <div class="team-section">
@@ -349,7 +349,8 @@
                             <p><strong>科別：</strong>不分科</p>
                             <p><strong>專長：</strong>暫無</p>
                             <p><strong>名言：</strong></p>
-                            <p class="motto">「我冷淡，是為了自保<br>我學醫，是為了守住所愛。」</p>
+                            <p class="motto">「冷淡是我的心理為了保護自己再不受到傷害
+                            ；而我學醫是為了不再失去任何我所珍視的人。」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
@@ -371,7 +372,7 @@
                         <div class="card-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
-                        <h3 class="doctor-name">xxx</h3>
+                        <h3 class="doctor-name">小鳥遊蒼太</h3>
                         <p class="position"><i class="fa-solid fa-user-doctor"></i> 不分科住院醫師</p>
                     </div>
                     <!-- 背面：玩家視角 -->
@@ -380,7 +381,7 @@
                             <p><strong>科別：</strong>急診科</p>
                             <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
                             <p><strong>名言：</strong></p>
-                            <p class="motto">「每一刀，都要為了活著的希望。」</p>
+                            <p class="motto">「我可以是火柴，雖不炙熱但能溫心，如果可以我選擇薯條加大跟巧克力布朗尼。」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
@@ -488,36 +489,6 @@
                             <h4>扮演者：米寶</h4>
                             <p>Discord：.mibao_</p>
                             <a href="https://www.twitch.tv/meisaurora" target="_blank" class="twitch-link">
-                                <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
-                                Twitch 頻道
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <!-- 正面：角色視角 -->
-                    <div class="flip-card-front">
-                        <div class="card-header">
-                            <img src="./img/user.png" alt="曉翔" class="profile-img">
-                        </div>
-                        <h3 class="doctor-name">XXX</h3>
-                        <p class="position"><i class="fa-solid fa-user-shield"></i> 保全</p>
-                    </div>
-                    <!-- 背面：玩家視角 -->
-                    <div class="flip-card-back">
-                        <div class="info-section">
-                            <p><strong>科別：</strong>心臟血管外科</p>
-                            <p><strong>專長：</strong>心臟瓣膜手術/微創開心手術</p>
-                            <p><strong>名言：</strong></p>
-                            <p class="motto">「偶爾耍廢，經常偶爾。」</p>
-                        </div>
-                        <hr class="divider">
-                        <div class="performer">
-                            <h4>扮演者：蕎妃</h4>
-                            <p>Discord：hannahijk</p>
-                            <a href="https://www.twitch.tv/hannahijk" target="_blank" class="twitch-link">
                                 <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                                 Twitch 頻道
                             </a>
