--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -186,13 +185,14 @@
                     <p>創傷中心主任 / 創傷專家</p>
                 </div>
             </div>
-            <a href="team.html" class="teambtn">查看更多醫師</a>
+            <a href="team.html" class="teambtn" onclick="showConstructionPopup(event)">查看更多醫師</a>
         </section>
 
         <section class="team-video">
             <h2><i class="fa-brands fa-youtube"></i> 白色巨塔-前導片</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/eBhI6C29IoU?si=qHPnYVxWp20LX6Yq" title="YouTube video player" frameborder="0" allowfullscreen>
+                <iframe src="https://www.youtube.com/embed/eBhI6C29IoU?si=qHPnYVxWp20LX6Yq" title="YouTube video player"
+                    frameborder="0" allowfullscreen>
                 </iframe>
             </div>
         </section>
@@ -201,13 +201,43 @@
             <div class="overlay">
                 <h1>白塔仍亮，生命仍在</h1>
                 <p>我們守護的不只是身體，還有希望。</p>
-                <button type="button" class="btn-cta">立即加入白塔</button>
+                <button type="button" class="btn-cta" id="joinBtn">立即加入白塔</button>
             </div>
         </section>
-
+        
+        <!-- Modal -->
+        <div id="contactModal" class="custom-modal">
+            <div class="custom-modal-content">
+                <span class="custom-close">&times;</span>
+                <h2>聯絡我們</h2>
+                <p>如果想知道更多，請找下面三位。</p>
+                <p>以下是他們的 Discord ID：</p>
+                <ul>
+                    <li><strong>小翔：</strong> uaenaxiang</li>
+                    <li><strong>阿鳥：</strong> smartbird1102</li>
+                    <li><strong>稀客：</strong> sick1429</li>
+                </ul>
+            </div>
+        </div>
     </main>
     <div id="footer"></div>
     <script src="./js/script.js"></script>
+    <script>
+        document.getElementById("joinBtn").addEventListener("click", function () {
+                document.getElementById("contactModal").style.display = "block";
+            });
+
+            document.querySelector(".custom-close").addEventListener("click", function () {
+                document.getElementById("contactModal").style.display = "none";
+            });
+
+            window.addEventListener("click", function (e) {
+                const modal = document.getElementById("contactModal");
+                if (e.target === modal) {
+                    modal.style.display = "none";
+                }
+            });
+    </script>
 </body>
 
 </html>
