--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">史蒂芬·史傳奇</h3>
@@ -53,7 +53,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">肖堯</h3>
@@ -84,7 +84,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="阿鳥" class="profile-img">
                         </div>
                         <h3 class="doctor-name">阿鳥</h3>
@@ -115,7 +115,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/D1.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">曉翔</h3>
@@ -127,7 +127,7 @@
                             <p><strong>科別：</strong>創傷中心</p>
                             <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
                             <p><strong>名言：</strong></p>
-                            <p class="motto">「每一刀，都要為了活著的希望。」</p>
+                            <p class="motto">「每一刀<br>都要為了活著的希望」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
@@ -151,7 +151,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="若凝" class="profile-img">
                         </div>
                         <h3 class="doctor-name">沈若凝</h3>
@@ -182,7 +182,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">李言光</h3>
@@ -212,25 +212,25 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
-                        <h3 class="doctor-name">xxx</h3>
+                        <h3 class="doctor-name">李宸宇</h3>
                         <p class="position"><i class="fa-solid fa-user-doctor"></i> 主治醫師</p>
                     </div>
                     <!-- 背面：玩家視角 -->
                     <div class="flip-card-back">
                         <div class="info-section">
-                            <p><strong>科別：</strong>急診科</p>
-                            <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
+                            <p><strong>科別：</strong>急診醫學科</p>
+                            <p><strong>專長：</strong>各式急重症處置</p>
                             <p><strong>名言：</strong></p>
                             <p class="motto">「每一刀，都要為了活著的希望。」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
-                            <h4>扮演者：暈船仔丨小翔丨</h4>
-                            <p>Discord：uaenaxiang</p>
-                            <a href="https://www.twitch.tv/yourname" target="_blank" class="twitch-link">
+                            <h4>扮演者：伊恩EN</h4>
+                            <p>Discord：enyian</p>
+                            <a href="https://www.twitch.tv/how4619" target="_blank" class="twitch-link">
                                 <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                                 Twitch 頻道
                             </a>
@@ -242,7 +242,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">xxx</h3>
@@ -275,7 +275,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">xxx</h3>
@@ -306,7 +306,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">xxx</h3>
@@ -337,7 +337,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name" style="font-size: 1.5rem;">葉夫根尼．謝羅夫</h3>
@@ -369,7 +369,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">小鳥遊蒼太</h3>
@@ -405,7 +405,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="姜睿恩" class="profile-img">
                         </div>
                         <h3 class="doctor-name">姜睿恩</h3>
@@ -436,25 +436,25 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
-                        <h3 class="doctor-name">xxx</h3>
+                        <h3 class="doctor-name">林辰軒</h3>
                         <p class="position"><i class="fa-solid fa-truck-medical"></i> EMT</p>
                     </div>
                     <!-- 背面：玩家視角 -->
                     <div class="flip-card-back">
                         <div class="info-section">
-                            <p><strong>科別：</strong>急診科</p>
-                            <p><strong>專長：</strong>大型創傷手術 / 器官修補</p>
+                            <p><strong>科別：</strong>緊急救護</p>
+                            <p><strong>專長：</strong>緊急處置</p>
                             <p><strong>名言：</strong></p>
-                            <p class="motto">「每一刀，都要為了活著的希望。」</p>
+                            <p class="motto">「在別人最無助時，可以成為支撐的一雙手」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
-                            <h4>扮演者：暈船仔丨小翔丨</h4>
-                            <p>Discord：uaenaxiang</p>
-                            <a href="https://www.twitch.tv/yourname" target="_blank" class="twitch-link">
+                            <h4>扮演者：Data</h4>
+                            <p>Discord：data0788</p>
+                            <a href="https://www.twitch.tv/data0708" target="_blank" class="twitch-link">
                                 <img src="./img/twitch.png" alt="Twitch" class="twitch-icon">
                                 Twitch 頻道
                             </a>
@@ -470,7 +470,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="沈舒意" class="profile-img">
                         </div>
                         <h3 class="doctor-name">沈舒意</h3>
@@ -482,7 +482,7 @@
                             <p><strong>科別：</strong>白塔醫院附設咖啡廳</p>
                             <p><strong>專長：</strong>各式甜點</p>
                             <p><strong>名言：</strong></p>
-                            <p class="motto">「LOOK AT MY EYES」</p>
+                            <p class="motto">「盡我自己所能，讓善意照亮這世間~」</p>
                         </div>
                         <hr class="divider">
                         <div class="performer">
@@ -500,7 +500,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/user.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">XXX</h3>
@@ -534,7 +534,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/ice.png" alt="iCE" class="profile-img">
                         </div>
                         <h3 class="doctor-name">iCE!</h3>
@@ -564,7 +564,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/icewife.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">蕎妃</h3>
@@ -594,7 +594,7 @@
                 <div class="flip-card-inner">
                     <!-- 正面：角色視角 -->
                     <div class="flip-card-front">
-                        <div class="card-header">
+                        <div class="circle-header">
                             <img src="./img/sick.png" alt="曉翔" class="profile-img">
                         </div>
                         <h3 class="doctor-name">Sick</h3>
