--- a/terms.html
+++ b/terms.html
@@ -68,6 +68,10 @@
                 <p>把點滴開到最大。</p>
             </div>
             <div class="term-card" data-category="state">
+                <h3>RSI快速誘導插管</h3>
+                <p>Rapid Sequence Intubation，幫助非完全昏迷或還有嘔吐反射之病患完成On Endo</p>
+            </div>
+            <div class="term-card" data-category="state">
                 <h3>On endo</h3>
                 <p>Endotracheal Intubation，氣管內插管。</p>
             </div>
